# jujutsu-mcp

./: .gitignore  INVESTIGATION_REPORT.md  README.md  flake.nix  pyproject.toml
.cursor/: mcp.json.example
.cursor/rules/: jujutsu-policy.mdc
src/jujutsu_mcp/: __init__.py  __main__.py  jj_commands.py  models.py  server.py
